--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8",
     "prettier": "^3.4.2",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
